# rPerception

./: .gitignore  Cargo.toml
src/: constants.rs  main.rs  perception.rs
src/constants/: constants.rs
src/io/: save.rs
src/perception/: filter.rs  perceptor.rs
src/util/: util.rs
