[package]
name = "perception"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "3D stereo image perception model in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
ndarray = "0.15.6"
